--- a/ThietKeWeb/ThietKeWeb.csproj
+++ b/ThietKeWeb/ThietKeWeb.csproj
@@ -150,6 +150,8 @@
     <Content Include="Content\images\a886e1ca9b503d0e64415.jpg" />
     <Content Include="Content\images\banner.jpg" />
     <Content Include="Content\images\banner2.jpg" />
+    <Content Include="Content\images\banner8.png" />
+    <Content Include="Content\images\banner9.png" />
     <Content Include="Content\images\BestSeller.jpg" />
     <Content Include="Content\images\Character-icon.png" />
     <Content Include="Content\images\fa1311596bc3cd9d94d27.jpg" />
