--- a/ThietKeWeb/ThietKeWeb.csproj
+++ b/ThietKeWeb/ThietKeWeb.csproj
@@ -184,6 +184,8 @@
     <Content Include="Content\images\sp8.png" />
     <Content Include="Content\images\sp9.png" />
     <Content Include="Content\images\tw-icon.png" />
+    <Content Include="Content\LogIn.js" />
+    <Content Include="Content\Register.js" />
     <Content Include="Content\stylesheet.css" />
     <Content Include="Content\stylesheet1.css" />
     <Content Include="favicon.ico" />
@@ -249,6 +251,7 @@
     <Content Include="Views\ProDuctDetail\TraVai.cshtml" />
     <Content Include="Views\ProDuctDetail\TraSuaTranChauTrang.cshtml" />
     <Content Include="Views\ProDuctDetail\TraDen.cshtml" />
+    <Content Include="Views\Home\NguonGoc.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
