--- a/ThietKeWeb/ThietKeWeb.csproj
+++ b/ThietKeWeb/ThietKeWeb.csproj
@@ -252,6 +252,8 @@
     <Content Include="Views\ProDuctDetail\TraSuaTranChauTrang.cshtml" />
     <Content Include="Views\ProDuctDetail\TraDen.cshtml" />
     <Content Include="Views\Home\NguonGoc.cshtml" />
+    <Content Include="Views\Home\DichVu.cshtml" />
+    <Content Include="Views\Home\NgheNghiep.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
