--- a/ThietKeWeb/ThietKeWeb.csproj
+++ b/ThietKeWeb/ThietKeWeb.csproj
@@ -131,7 +131,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\Admin_CategoriesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\Admin_CustomersController.cs" />
+    <Compile Include="Areas\Admin\Controllers\Admin_OrderDetailsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\Admin_OrdersController.cs" />
     <Compile Include="Areas\Admin\Controllers\Admin_ProductsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\Admin_UsersController.cs" />
     <Compile Include="Areas\Admin\Controllers\TrangChuController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProDuctDetailController.cs" />
@@ -203,13 +207,20 @@
     <Content Include="Content\images\banner9.png" />
     <Content Include="Content\images\BestSeller.jpg" />
     <Content Include="Content\images\Character-icon.png" />
+    <Content Include="Content\images\coffee.png" />
+    <Content Include="Content\images\DichVu.jpg" />
+    <Content Include="Content\images\dichvu.png" />
     <Content Include="Content\images\email-icon.png" />
     <Content Include="Content\images\fa1311596bc3cd9d94d27.jpg" />
     <Content Include="Content\images\fb-icon.png" />
     <Content Include="Content\images\Heart-icon.png" />
     <Content Include="Content\images\ins-icon.png" />
     <Content Include="Content\images\logo1.png" />
+    <Content Include="Content\images\nghenghiep %281%29.jpg" />
+    <Content Include="Content\images\NgheNghiep1.jpg" />
+    <Content Include="Content\images\NguonGoc.jpg" />
     <Content Include="Content\images\phone-icon.png" />
+    <Content Include="Content\images\Recruit.jpg" />
     <Content Include="Content\images\search-icon.JPG" />
     <Content Include="Content\images\Shopping-cart-icon.png" />
     <Content Include="Content\images\sp1.png" />
@@ -232,6 +243,7 @@
     <Content Include="Content\images\sp7.png" />
     <Content Include="Content\images\sp8.png" />
     <Content Include="Content\images\sp9.png" />
+    <Content Include="Content\images\tea1.png" />
     <Content Include="Content\images\tw-icon.png" />
     <Content Include="Content\LogIn.js" />
     <Content Include="Content\Register.js" />
@@ -278,6 +290,26 @@
     <Content Include="Areas\Admin\Views\Admin_Categories\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Admin_Products\PVCreateEditProduct.cshtml" />
     <Content Include="Areas\Admin\Views\Admin_Products\PVProdInfo.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Customers\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Customers\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Customers\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Customers\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Customers\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_OrderDetails\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_OrderDetails\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_OrderDetails\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_OrderDetails\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_OrderDetails\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Users\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Users\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Users\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Users\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Users\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Orders\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Orders\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Orders\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Orders\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Admin_Orders\Index.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -335,6 +367,13 @@
     <Content Include="Views\Home\NguonGoc.cshtml" />
     <Content Include="Views\Home\DichVu.cshtml" />
     <Content Include="Views\Home\NgheNghiep.cshtml" />
+    <Content Include="Views\Home\RecruitDetail.cshtml" />
+    <Content Include="Views\Shared\_LayoutTuyendung.cshtml" />
+    <Content Include="Views\Home\CaPhe.cshtml" />
+    <Content Include="Views\Home\Tra.cshtml" />
+    <Content Include="Views\Home\DaXay.cshtml" />
+    <Content Include="Views\Home\Khac.cshtml" />
+    <Content Include="Views\Home\AboutUs.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
