--- a/ThietKeWeb/Web.config
+++ b/ThietKeWeb/Web.config
@@ -62,6 +62,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="ThietKeWebEntities" connectionString="metadata=res://*/Models.ThietKeWebModel.csdl|res://*/Models.ThietKeWebModel.ssdl|res://*/Models.ThietKeWebModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-L29P619;initial catalog=ThietKeWeb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyStoreEntities" connectionString="metadata=res://*/Models.MyStoreModel.csdl|res://*/Models.MyStoreModel.ssdl|res://*/Models.MyStoreModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-AN3698A;initial catalog=MyStore;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
